[VP] Created usermeta 'vp_show_welcome_panel'
VP-Action: usermeta/create/E001F1DDF5D347B3A2983EA983319B24
VP-User-Id: 24C8E72167EC4F6995920237CDC76539
VP-UserMeta-Key: vp_show_welcome_panel
VP-User-Login: lars

X-VP-Version: 4.0-beta
X-VP-Environment: default

--- a/wp-content/vpdb/users/24/24C8E72167EC4F6995920237CDC76539.ini
+++ b/wp-content/vpdb/users/24/24C8E72167EC4F6995920237CDC76539.ini
@@ -24,3 +24,4 @@ dismissed_wp_pointers#E470D692B34E473E91369B3EE1084AFF = ""
 show_welcome_panel#9763B344FCF746968D8DCF3032EF208C = "1"
 community-events-location#B35B0860527F4FBF823CA9C6E1DDEA3E = <<<serialized>>> <array>
 community-events-location#B35B0860527F4FBF823CA9C6E1DDEA3E["ip"] = "::"
+vp_show_welcome_panel#E001F1DDF5D347B3A2983EA983319B24 = "0"
