[VP] Created usermeta 'community-events-location'
VP-Action: usermeta/create/C6C453129CE142DB95AFA1A59327658D
VP-User-Id: 6397052D4527485AA21B8B9E93A7ADC7
VP-UserMeta-Key: community-events-location
VP-User-Login: slawa

X-VP-Version: 4.0-beta
X-VP-Environment: default

--- a/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
+++ b/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
@@ -21,3 +21,5 @@ locale#BA5BD18DBFC443C6B77C55FCE9BE4B71 = ""
 <<table-prefix>>capabilities#F2D297B1A5674191AB4302C320BD82ED["administrator"] = <boolean> true
 <<table-prefix>>user_level#C7098FF48837430EBA8B53FE436E902A = "10"
 dismissed_wp_pointers#8AC1BA1812D446448F914351E2BDFEDA = ""
+community-events-location#C6C453129CE142DB95AFA1A59327658D = <<<serialized>>> <array>
+community-events-location#C6C453129CE142DB95AFA1A59327658D["ip"] = "::"
