[VP] Created usermeta 'vp_show_welcome_panel'
VP-Action: usermeta/create/7CB9F950EA944BB1AF7DB4E963AA571D
VP-User-Id: 6397052D4527485AA21B8B9E93A7ADC7
VP-UserMeta-Key: vp_show_welcome_panel
VP-User-Login: slawa

X-VP-Version: 4.0-beta
X-VP-Environment: default

--- a/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
+++ b/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
@@ -23,3 +23,4 @@ locale#BA5BD18DBFC443C6B77C55FCE9BE4B71 = ""
 dismissed_wp_pointers#8AC1BA1812D446448F914351E2BDFEDA = ""
 community-events-location#C6C453129CE142DB95AFA1A59327658D = <<<serialized>>> <array>
 community-events-location#C6C453129CE142DB95AFA1A59327658D["ip"] = "::"
+vp_show_welcome_panel#7CB9F950EA944BB1AF7DB4E963AA571D = "0"
