[VP] Updated usermeta 'admin_color'
VP-Action: usermeta/update/97DCB1EFCDE64CCBBBD6D3DFD038D295
VP-User-Id: 6397052D4527485AA21B8B9E93A7ADC7
VP-UserMeta-Key: admin_color
VP-User-Login: slawa

X-VP-Version: 4.0-beta
X-VP-Environment: default

--- a/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
+++ b/wp-content/vpdb/users/63/6397052D4527485AA21B8B9E93A7ADC7.ini
@@ -13,7 +13,7 @@ last_name#6D5A985FD6534EA382089C0DE260C148 = ""
 description#0AF6C11BB2D64D579218A2699F73DE01 = ""
 rich_editing#0251E30F2140462C89E23C27CC3A8690 = "true"
 comment_shortcuts#ECC6B87E82F34E12BCCE250DFB804DE7 = "false"
-admin_color#97DCB1EFCDE64CCBBBD6D3DFD038D295 = "fresh"
+admin_color#97DCB1EFCDE64CCBBBD6D3DFD038D295 = "midnight"
 use_ssl#BC61696781F74C6D92B82069FEC48CB9 = "0"
 show_admin_bar_front#BA10807ABA0B4E8DB00C63B4EA848EE2 = "true"
 locale#BA5BD18DBFC443C6B77C55FCE9BE4B71 = ""
